add place holder support and placeholder style in tiptap editor

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@tiptap/extension-placeholder": "^2.3.0",
     "@tiptap/pm": "^2.3.0",
     "@tiptap/starter-kit": "^2.3.0",
     "@tiptap/vue-3": "^2.3.0",
