--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@tiptap/extension-focus": "^2.3.0",
     "@tiptap/extension-placeholder": "^2.3.0",
+    "@tiptap/extension-text-style": "^2.3.0",
     "@tiptap/pm": "^2.3.0",
     "@tiptap/starter-kit": "^2.3.0",
     "@tiptap/vue-3": "^2.3.0",
